--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AniList App</title>
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Vue.js -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 </head>
 <body>
+    <!-- App Root -->
     <div id="app"></div>
+    <!-- Models JS -->
     <script src="assets/js/models.js"></script>
+    <!-- API JS -->
     <script src="assets/js/api.js"></script>
+    <!-- App Logic JS -->
     <script src="assets/js/app.js"></script>
 </body>
 </html>
