--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,34 @@
 <body>
     <!-- App Root -->
     <div id="app"></div>
+
+    <!-- Spacer (pousse le footer en bas si la page est courte) -->
+    <div class="footer-spacer" aria-hidden="true"></div>
+
+    <!-- Footer (liens utiles) -->
+    <footer class="site-footer">
+        <div class="footer-inner">
+            <div class="footer-col">
+                <div class="footer-col-title">GebrilIV</div>
+                <a class="footer-link" href="https://github.com/GebrilIV" target="_blank" rel="noopener noreferrer">GitHub : GebrilIV</a>
+                <a class="footer-link" href="https://namemc.com/profile/PachaIV.2" target="_blank" rel="noopener noreferrer">NameMC : PachaIV</a>
+            </div>
+
+            <div class="footer-col">
+                <div class="footer-col-title">Info</div>
+                <a class="footer-link" href="https://anilist.co/" target="_blank" rel="noopener noreferrer">AniList API</a>
+                <a class="footer-link" href="https://vuejs.org/" target="_blank" rel="noopener noreferrer">Vue.js</a>
+                <a class="footer-link" href="https://www.slimframework.com/" target="_blank" rel="noopener noreferrer">Slim 4</a>
+                <a class="footer-link" href="https://github.com/GebrilIV/ani-list" target="_blank" rel="noopener noreferrer">Repo GitHub</a>
+            </div>
+
+            <div class="footer-col">
+                <div class="footer-col-title">Bientôt</div>
+                <span class="footer-muted">Plus de liens à venir…</span>
+            </div>
+        </div>
+    </footer>
+
     <!-- Models JS -->
     <script src="assets/js/models.js"></script>
     <!-- API JS -->
